# rebox

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
coreutils/: Cargo.toml
coreutils/src/commands/: base32.rs  base64.rs  cat.rs  dd.rs  dirname.rs  dos2unix.rs  echo.rs  env.rs  false.rs  hello.rs  hostname.rs  ln.rs  mkdir.rs  mod.rs  nproc.rs  pwd.rs  seq.rs  sleep.rs  tee.rs  test.rs  true.rs  unix2dos.rs  whoami.rs  yes.rs
shell/: Cargo.toml
shell/src/: ash.rs  lib.rs
shell/src/built_in/: cd.rs  eval.rs  exit.rs  mod.rs
src/: boxcmd.rs  main.rs  registry.rs
utils/: Cargo.toml
utils/src/: args.rs  commands.rs  input.rs  lib.rs  registry.rs
utils/src/cross/: fs.rs
utils/src/cross/user/: mod.rs  unix.rs  win.rs
utils/src/encoding/: base16.rs  base32.rs  base64.rs  mod.rs
