[package]
name = "rebox"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["utils", "coreutils", "shell"]
resolver = "3"

[workspace.dependencies]
coreutils = { path = "./coreutils" }
boxutils = { path = "./utils" }
shell = { path = "./shell" }

[dependencies]
coreutils.workspace = true
boxutils.workspace = true
shell.workspace = true

[[bin]]
name = "box"
path = "./src/main.rs"
